# free-faucet

./: .env  Cargo.toml  Dioxus.toml  Dockerfile  README.md
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/tests/: db_test.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs  shared.rs  state.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/assets/styling/: claim.css  faq.css  logs.css  payout.css
crates/ui/src/: claim.rs  faq.rs  lib.rs  logs.rs  payout.rs
crates/web/: Cargo.toml
crates/web/assets/: custom_theme.css  default_theme.css  ga.js  main.css
crates/web/src/: main.rs
crates/zeroxname-ethereum/: Cargo.toml
crates/zeroxname-ethereum/assets/abis/: NamesRegistry.json
crates/zeroxname-ethereum/src/: lib.rs
