[workspace]
resolver = "2"
members = [
    "crates/ui",
    "crates/web",
    "crates/server",
    "crates/zeroxname-ethereum",
    "crates/db",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
getrandom = { version = "0.2", features = ["js"] }
thiserror = "2.0.11"
serde = { version = "1.0.197", features = ["derive"] }
fjall = "2.6.7"
alloy-dyn-abi = "0.8.23"
alloy-network = "0.12.5"
alloy-primitives = "0.8.23"
alloy-provider = "0.12.5"
alloy-rpc-types = "0.12.5"
alloy-signer-local = "0.12.5"
alloy-sol-macro = { version = "0.8.23", features = ["json"] }
alloy-transport = "0.12.5"
alloy-sol-types = "0.8.23"
alloy-contract = "0.12.5"
dotenv = "0.15.0"
# workspace
ui = { path = "crates/ui" }
web = { path = "crates/web" }
server = { path = "crates/server" }
zeroxname-ethereum = { path = "crates/zeroxname-ethereum" }
db = { path = "crates/db" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
