[workspace.package]
version = "0.1.2"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/ui",
    "crates/web",
    "crates/server",
    "crates/zeroxname-ethereum",
    "crates/db",
    "crates/shared-types",
]

[workspace.dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
getrandom = { version = "0.2", features = ["js"] }
thiserror = "2.0.11"
serde = { version = "1.0.197", features = ["derive"] }
fjall = "2.10.0"
alloy-dyn-abi = "0.8.23"
alloy-network = "0.12.5"
alloy-primitives = "0.8.23"
alloy-provider = "0.12.5"
alloy-rpc-types = "0.12.5"
alloy-signer-local = "0.12.5"
alloy-sol-macro = { version = "0.8.23", features = ["json"] }
alloy-transport = "0.12.5"
alloy-sol-types = "0.8.23"
alloy-contract = "0.12.5"
dotenv = "0.15.0"
rmp-serde = "1.3.0"
format-bytes = "0.3.0"
chrono = "0.4.41"
# workspace
ui = { path = "crates/ui" }
web = { path = "crates/web" }
server = { path = "crates/server" }
zeroxname-ethereum = { path = "crates/zeroxname-ethereum" }
db = { path = "crates/db" }
shared-types = { path = "crates/shared-types" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
