[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true, features = [] }
ui = { workspace = true }
server = { workspace = true }
getrandom = { workspace = true, optional = false }


[features]
default = []
server = ["dioxus/server", "server/server"]
web = ["dioxus/web"]
