[package]
name = "zeroxname-ethereum"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
thiserror.workspace = true
alloy-dyn-abi.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-signer-local.workspace = true
alloy-sol-macro.workspace = true
alloy-transport.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
